# rag-ai-assistant

./: .gitignore  README.md  api.py  pyproject.toml  streamlit_app.py
.streamlit/: secrets.toml.template
context/: README.md
scripts/: scrape_and_ingest.py
src/: config.py  document_loader.py  inngest_functions.py  memory.py  query_router.py  rag_engine.py  scraper.py  vector_store.py
